# qa_guru_17_poetry

./: pyproject.toml
